# render-engine

./: CMakeLists.txt  Magnum.cmake  README.md  vcpkg.json
cmake/: Engine.cmake  Shaders.cmake  shader_path.h.in  shaders.diff
images/: irradiance_nx.hdr  irradiance_ny.hdr  irradiance_nz.hdr  irradiance_px.hdr  irradiance_py.hdr  irradiance_pz.hdr
include/: camera.hpp  env.hpp  image.hpp  loader.hpp  logging.hpp  shader.hpp  window.hpp
shaders/: animation.glsl  background.frag  background.vert  brdf.frag  brdf.glsl  cubemap.vert  equirectangular_to_cubemap_copy.frag  functions.glsl  ibl.glsl  ibl_filtering.frag  image.vert  io.glsl  iridescence.glsl  irradiance_convolution.frag  material_info.glsl  math.glsl  pbr.frag  pbr.glsl  pbr.vert  prefilter.frag  punctual.glsl  textures.glsl  tonemapping.glsl
src/: camera.cpp  env.cpp  image.cpp  loader.cpp  main.cpp  shader.cpp  viewer.cpp
